2008-08-06  Callum McKenzie  <callum@spooky-possum.org>

	* dock.c (gnome_volume_applet_dock_init): Explicitly disable
	decoration of the dock window since the type hint isn't doing the
	right thing for everyone (see bug #456498).

2008-07-27  Callum McKenzie  <callum@spooky-possum.org>

	* applet.h:		
	* applet.c: Patch from Bastien Nocera to use gstreamer signals to
	avoid the need to poll the state (to update the icon) on devices
	which support it. See bug #478485.

2008-07-06  Changwoo Ryu  <cwryu@debian.org>

	* docs/ko/ko.po: Updated Korean translation.

2008-07-01  Callum McKenzie  <callum@spooky-possum.org>

	* dock.c:
	* dock.h:
	* applet.c: Decouple the dock window from the volume applet by
	introducing gnome_volume_applet_dock_set_focus. Simplify the
	window repositioning code, the initial guess is unnecessary. Move
	the adjustment object into a central location under the applet
	object and avoid reconstructing it every time the dock is rebuilt.

2008-06-26  Callum McKenzie  <callum@spooky-possum.org>

	* dock.c: Remove abuse of internal knowledge about GTK+.
	Refactoring of the source removal code and the widget creation
	code. Make the widget creation even more data driven. Use a
	"normal" top-level window for the slider with appropriate
	properties set rather than some of the magic that had been used.
	This changes the behaviour of the slider. It is no longer modal,
	instead it is sticky and stay-on-top in the same style as other
	dock windows.

	* dock.h: Remove unnecessary includes. 

	* applet.c: Remove the explicit grab in favour of a traditional
	top-level window for the volume slider. Make sure that an
	adjustment isn't leaked when the applet is moved from a horizontal
	to a vertical panel.

2008-05-31  Gabor Kelemen  <kelemeng@gnome.hu>

	* docs/Makefile.am: Added hu to DOC_LINGUAS
	* docs/hu/hu.po: Added Hungarian translation by Őry Máté.

2008-04-25  Callum McKenzie  <callum@spooky-possum.org>

	* applet.c: