@@ -1,3 +1,9 @@
+2008-08-07  Callum McKenzie  <callum@spooky-possum.org>
+
+	* dock.c (gnome_volume_applet_dock_init): Be more explicit about
+	everything to do with the dock window behaviour. (Continuation of
+	bug #456498)
+
 2008-08-06  Callum McKenzie  <callum@spooky-possum.org>
 
 	* dock.c (gnome_volume_applet_dock_init): Explicitly disable
